--- a/css/blog.css
+++ b/css/blog.css
@@ -1,5 +1,14 @@
 /* TODO 公共css*/
 
+a {
+    color: #1f1e1e;
+}
+
+a:hover {
+    color: #b260ce!important;
+    text-decoration: none;
+}
+
 /* notes css */
 .notes-list {
     width: 100%;
@@ -22,11 +31,6 @@
     font-weight: 100;
 }
 
-.notes-list .notes-shadow .notes-content a:hover {
-    color: #b260ce;
-    text-decoration: none;
-}
-
 .notes-list .notes-shadow .notes-footer {
     padding: 1.4rem 1.4rem;
 }
@@ -40,32 +44,54 @@
     color: #00bcd4;
 }
 
-/*热门文章*/
-.hot-essays {
+/*右部挂件 - 热门文章 | 热门推荐 |  最新评论 | 友情链接*/
+.right-pendant {
     width: 100%;
-    height: 21rem;
-    background-color: #ceffee;
     margin-bottom: 1.4rem;
     box-shadow: 0 2px 5px 3px #ddd;
 }
 
-.hot-essays .hot-essays-title {
+.right-pendant .right-pendant-title {
     padding: 1.4rem 1.4rem;
     border-bottom: 1px solid #ddd;
 }
 
-.hot-essays .hot-essays-title .title {
+.right-pendant .right-pendant-title .title {
     margin: 0!important;
     font-size: 1rem;
     font-weight: bold;
     color: #5a5050;
 }
 
-.hot-essays .hot-essays-content {
-    padding: 1.4rem 1.4rem;
+.right-pendant .right-pendant-content {
+    /*padding: 1.4rem 1.4rem;*/
 }
 
-.hot-essays .hot-essays-content ul {
+.right-pendant .right-pendant-content ul {
     padding: 0;
     list-style: none;
+}
+
+.right-pendant .right-pendant-content ul li {
+    line-height: 2rem;
+    padding: .7rem 1.4rem;
+    border-bottom: 1px dotted #ddd;
+}
+
+
+/* 更多随笔 */
+.essay-more {
+    margin-bottom: 2rem;
+}
+
+
+/* 网站底部 */
+.footer {
+
+}
+
+.footer .copyright {
+    font-size: 14px;
+    text-align: center;
+    margin-bottom: 0;
 }
